--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,31 @@
+
 a{
     text-decoration: none !important;
+}
+
+body {
+	background-color: var(--clr-accent-300);
+	background-image: url(1.png);
+	background-repeat: no-repeat;
+    background-size: 100vw auto;
+    background-position: center;
+}
+svg {
+    width: 15vw;
+    overflow: visible
+}
+/* 
+g {
+    overflow:  hidden;
+    visibility: hidden;
+} */
+
+.reveal {
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    top: -20;
+    left: 0;
+    z-index: -1;
+    background-color: #FAD986;
 }
