--- a/css/styles.css
+++ b/css/styles.css
@@ -13,30 +13,34 @@ a {
 }
 
 body {
-    /* background-color: var(--clr-accent-300);
+    background-color:  var(--clr-accent-300);
 	background-image: url(../assets/images/1234.png);
 	background-repeat: no-repeat;
     background-size: cover;
-    background-position: center; */
+    background-position: center;
+    overflow: hidden;
 }
 
 .arrow-svg {
-    width: 20vw;
-    overflow: visible
+    width: 300px;
+    overflow: visible;
 }
 
-/* 
+
 g {
     overflow:  hidden;
     visibility: hidden;
-} */
+}
 
 .reveal {
-    position: absolute;
+    position: relative;
     height: 100vh;
     width: 100%;
     top: -20;
     left: 0;
+    display: flex;
+    align-items: end;
+    justify-content: center;
     z-index: -1;
     background-color: #4f2e25;
     opacity: 0.9;
