--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-a {
-    text-decoration: none !important;
-}
-
 @font-face {
     font-family: 'saman';
     src: URL('../assets/fonts/SAMAN___.ttf') format('truetype');
@@ -13,30 +9,35 @@ a {
 }
 
 body {
-    background-color:  var(--clr-accent-300);
-	background-image: url(../assets/images/1234.png);
-	background-repeat: no-repeat;
+    background-color: #5A382C;
+    background-image: url(../assets/images/1234.png);
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     overflow: hidden;
 }
 
+a {
+    text-decoration: none !important;
+}
+
+/* pre-loader */
 .arrow-svg {
     width: 300px;
     overflow: visible;
 }
 
-
 g {
-    overflow:  hidden;
+    overflow: hidden;
     visibility: hidden;
 }
 
-.reveal {
+.loader {
     position: relative;
     height: 100vh;
     width: 100%;
-    top: -20;
+    top: -5vh;
+    /* 10 for smaller devices */
     left: 0;
     display: flex;
     align-items: end;
@@ -46,53 +47,61 @@ g {
     opacity: 0.9;
 }
 
+/* section */
 .section {
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
-.content {
-    width: 80%;
-}
-
 .section-secondary {
     background-color: black;
 }
-
-.section-heading {}
-
+.content {
+    width: 80%;
+}
+.section-heading {
+    font-family: 'saman';
+    font-size: 2.5rem;
+    text-align: center;
+}
+.content-primary > .section-heading {
+    color: #F68D33;
+    text-shadow:
+        1px 3px 0px rgba(0, 0, 0, 0.4);
+}
+.content-secondary > .section-heading {
+    color: #F68D33;    
+    text-shadow:
+        1px 3px 0px rgba(246, 141, 51, 0.3);
+}
 .section-sub-heading {
     font-family: 'yatra one';
-    color: #E5C14F;
-}
-
-.email-text {
-    font-family: 'yatra one';
-    margin-left: 10px;
-    text-decoration: none;
-    color: #E5C14F;
-}
-
-.email-text:hover {
     color: #F68D33;
 }
-
-.social-links-logo {
-    background-color: #E5C14F;
-    color: black;
-    border-radius: 50%;
-    padding: 3px;
-}
-
-.social-links-logo:hover {
-    background-color: #F68D33;
-}
-
-.social-links:not(:first-of-type) {
-    margin-left: 15px;
-}
-
 .section-divider {
     height: 40px;
     width: 100%;
     background-image: url(../assets/sectionDivisionSvg/desert-fort.svg);
+}
+
+
+/* scrollbar */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(78, 186, 191, 0.3);
+    background-color: var(--clr-accent-300);
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+    background-color: var(--clr-accent-700);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #E5C14F;
+    position: absolute;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--clr-accent-800);
 }
