--- a/css/the-pandevs.css
+++ b/css/the-pandevs.css
@@ -1,3 +1,9 @@
+#the-pandevs-section {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.25), #5A382C);
+    background-size: 100% 30px;
+    background-repeat: no-repeat;
+}
+
 .pandevs-outer-div {
     max-width: 280px;
     border-radius: 20px;
@@ -48,17 +54,11 @@
 .pandevs-div {
     background: #88340B;
 }
+
 .dharma-chakra-border {
     border-radius: 20px;
     border: 2rem solid transparent;
     border-image: url(../assets/borderSvgs/dharma-chakra.png) 35% round;
-    padding: 0 !important;
-}
-
-.sword-border {
-    border-radius: 20px;
-    border: 3rem solid transparent;
-    border-image: url(../assets/borderSvgs/sword.png) 40% round;
     padding: 0 !important;
 }
 
@@ -71,7 +71,7 @@
     font-size: var(--fs-300);
 }
 
-.project-img {
+.pandevs-profile-img {
     -webkit-transition: .5s ease-in-out;
     transition: .5s ease-in-out;
     width: 180px;
@@ -82,7 +82,7 @@
     /* border: 2px solid var(--clr-accent-700); */
 }
 
-.project-figure {
+.pandevs-profile-figure {
     overflow: hidden;
     border-radius: 7px;
     /* box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; */
@@ -107,28 +107,12 @@
 /* media query */
 @media (max-width: 1200px) {}
 
-@media (max-width: 993px) {
-    /* .project-outer-div {
-        width: 65%;
-    } */
-}
+@media (max-width: 993px) {}
 
 @media (max-width: 945px) {}
 
-@media (max-width: 780px) {
-    /* .project-outer-div {
-        width: 85%;
-    } */
-}
+@media (max-width: 780px) {}
 
-@media (max-width: 550px) {
-    /* .project-outer-div {
-        width: 85%;
-    } */
-}
+@media (max-width: 550px) {}
 
-@media (max-height: 820px) {
-    /* .project-outer-div {
-        width: 85%;
-    } */
-}
+@media (max-height: 820px) {}
