--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 .about-us-text {
-    color: #E5C14F; 
+    color: var(--clr-accent-300); 
     font-family: 'yatra one'; 
     text-align: justify; 
     max-width: 450px;
@@ -8,22 +8,22 @@
     font-family: 'yatra one';
     margin-left: 10px;
     text-decoration: none;
-    color: #E5C14F;
+    color: var(--clr-accent-300);
 }
 
 .email-text:hover {
-    color: #F68D33;
+    color: var(--clr-accent-700);
 }
 
 .social-links-logo {
-    background-color: #E5C14F;
-    color: black;
+    background-color: var(--clr-accent-300);
+    color: var(--clr-accent-970);
     border-radius: 50%;
     padding: 3px;
 }
 
 .social-links-logo:hover {
-    background-color: #F68D33;
+    background-color: var(--clr-accent-700);
 }
 
 .social-links:not(:first-of-type) {
@@ -32,5 +32,5 @@
 
 .footer-contrib-text {
     font-family: 'yatra one'; 
-    color: #F68D33;
+    color: var(--clr-accent-700);
 }
