--- a/css/globals.css
+++ b/css/globals.css
@@ -2,7 +2,7 @@
     --clr-accent-100: #ffffff; /* content */
     --clr-accent-200: #DEB887;
     --clr-accent-300: #E5C14F; /* content */
-    --clr-accent-400: #DAA520;
+    --clr-accent-400: #DFB52A;
     --clr-accent-500: #B8860B;
     --clr-accent-600: #CD853F;
     --clr-accent-700: #F68D33; /* content */
