--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ g {
 }
 .section-heading {
     font-family: 'saman';
-    font-size: 2.5rem;
+    font-size: var(--fs-500);
     text-align: center;
 }
 .content-primary > .section-heading {
@@ -79,6 +79,7 @@ g {
 .section-sub-heading {
     font-family: 'yatra one';
     color: var(--clr-accent-700);
+    font-size: var(--fs-300);
 }
 .section-divider {
     height: 40px;
@@ -104,5 +105,25 @@ g {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: var(--clr-accent-800);
+    background-color: var(--clr-accent-400);
 }
+
+/* media query */
+@media (max-width: 1200px) {}
+
+@media (max-width: 993px) {}
+
+@media (max-width: 945px) {}
+
+@media (max-width: 780px) {
+    .section-heading {
+        font-size: var(--fs-400);
+    }
+    .section-sub-heading {
+        font-size: var(--fs-250);
+    }
+}
+
+@media (max-width: 550px) {}
+
+@media (max-height: 820px) {}
