--- a/css/the-pandevs.css
+++ b/css/the-pandevs.css
@@ -5,9 +5,14 @@
 }
 
 .pandevs-outer-div {
-    max-width: 280px;
+    width: 280px;
+    height: 373px;
     border-radius: 20px;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+
+.pandevs-div {
+    position: relative;
 }
 
 /* box-shadows
@@ -63,12 +68,20 @@
 }
 
 .pandevs-heading {
-    color: var(--clr-accent-700);
     /* font-weight: var(--fw-semi-bold); */
     font-family: 'yatra one';
     color: var(--clr-accent-300);
     opacity: 1.5;
     font-size: var(--fs-200);
+    text-align: center;
+}
+
+.pandevs-sub-heading {
+    font-family: 'yatra one';
+    color: var(--clr-accent-300);
+    margin-top: 5px;
+    font-size: var(--fs-100);
+    text-align: center;
 }
 
 .pandevs-profile-img {
@@ -85,6 +98,7 @@
 .pandevs-profile-figure {
     overflow: hidden;
     border-radius: 7px;
+    margin-bottom: 10px;
     /* box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px; */
 }
 
@@ -93,6 +107,11 @@
     opacity: 0.6;
     font-size: var(--fs-150);
     text-align: justify;
+}
+
+.pandevs-social-links-div {
+    position: absolute;
+    bottom: 0;
 }
 
 .iconify-redirect-icon {
