completed the pandava code section

--- a/css/globals.css
+++ b/css/globals.css
@@ -17,6 +17,7 @@
     --fw-semi-bold: 500;
     --fw-bold: 700;
   
+    --fs-50: 0.60rem;
     --fs-100: 0.80rem;
     --fs-150: 0.96rem;
     --fs-200: 1rem;
