--- a/css/home.css
+++ b/css/home.css
@@ -3,7 +3,7 @@
 	width: 100%;
 	position: relative;
 	background-color: var(--clr-accent-930);
-	background-image: url(../assets/images/1234.png);
+	background-image: url(../assets/images/backgroundImage.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
