--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 
 body {
     background-color: var(--clr-accent-930);
-    background-image: url(../assets/images/backgroundImage.png);
+    background-image: url(../assets/images/backgroundImage.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
